<resources>
    <string name="app_name">Knode</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_button_label">Log in</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email address</string>
    <string name="signup_error_message">Please make sure you enter an username, password and email address!</string>
    <string name="signup_error_title">Opps!, something went wrong</string>
    <string name="login_error_message">Please make sure you enter a valid username and password!</string>
    <string name="login_error_title">Opps, something went wrong</string>
    <string name="menu_log_out_label">Log Out</string>
    <string name="facebook_app_id">1130958326914434</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inbox">inbox</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="view_inbox">Inbox</string>
    <string name="no_messages">No messages</string>
    <string name="no_contacts">Get connect people</string>
    <string name="add_contacts">Edit Contact(s)</string>
    <string name="title_activity_edit_friend">Edit Friend</string>
    <string name="something_went_wrong">It something has gone wrong</string>
    <string-array name="camera_choices">
        <item>Take picture</item>
        <item>Take video</item>
        <item>Select picture</item>
        <item>Select video</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_navi_title">Menu</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="we_can_help_label">We can Help!</string>
    <string name="your_name_label">Your Name</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="tab_title_messager">Inbox</string>
    <string name="tab_title_contact">Contacts</string>
    <string name="no_event_data">There is no event data to load</string>
    <string name="no_network_available">There is no network available</string>
    <string name="join_label">Join</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="createEventTitleLabel">Create an Event</string>
    <string name="name_of_event">Name of Event</string>
    <string name="description_label">Description (50 characters max)</string>
    <string name="hashtag_event_label">Hashtags to describe event</string>
    <string name="attendees_max_label">Attendees (number of attendees)</string>
    <string name="people_whom_network">People who should network:</string>
    <string name="publishButton">Publish</string>
    <string name="createEvent_error_message">Please create event the</string>
    <string name="camera_item">Camera</string>
    <string name="error_with_external_storage">Problem when locating storage on your devices</string>
    <string name="knode_general_error">Sorry, there was an error</string>
    <string name="select_video_max_warning">Please select a video which is less than 10MB</string>
    <string name="knode_selectedvideo_error">There was problem with the file selected</string>
    <string name="file_overlimit_error">The selected file is to large</string>
    <string name="title_activity_chat">Chat</string>
    <string name="choose_contact_message">Choose contact first</string>
    <string name="error_title">Opps</string>
    <string name="send_label">Send</string>
    <string name="error_selecting_file">There was an error with the selected file. Please select another one</string>
    <string name="success_message_sent">Message was sent!</string>
    <string name="error_sending_message">There was problem sending the message. Please try again</string>
    <string name="title_activity_twitter_time_line">TwitterTimeLineActivity</string>
    <string name="title_activity_event_description">EventDescriptionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_profile_description">profileDescriptionActivity</string>

</resources>
