<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimary"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".ui.SignUpActivity"
                tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/usernameField"
            android:hint="@string/prompt_username"
            android:layout_marginBottom="10dp">
            <requestFocus/>
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:layout_marginBottom="10dp"
            android:id="@+id/passwordField" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_email"
            android:id="@+id/emailField" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundshapebtn"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_button"
            android:id="@+id/signUpButton" />

    </LinearLayout>

</RelativeLayout>
