<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimary"
    tools:context="com.fyp.knode.ui.CreateEventActivity"
    tools:showIn="@layout/activity_create_event">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEventTitleLabel"
        android:id="@+id/createEventTitleLabel"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:paddingEnd="30dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_event"
        android:id="@+id/name_of_event_label"
        android:layout_below="@+id/createEventTitleLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="43dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:id="@+id/nameEventEditText"
        android:layout_below="@+id/name_of_event_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_border_edittext"
        android:layout_alignRight="@+id/event_of_description_label"
        android:layout_alignEnd="@+id/event_of_description_label"
        android:textIsSelectable="false"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:id="@+id/event_of_description_label"
        android:layout_below="@+id/name_of_event_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="43dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:id="@+id/description_EditText"
        android:layout_below="@+id/event_of_description_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_border_edittext"
        android:layout_alignRight="@+id/event_of_description_label"
        android:layout_alignEnd="@+id/event_of_description_label"
        android:textIsSelectable="false"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hashtag_event_label"
        android:id="@+id/hashtag_of_event_label"
        android:layout_below="@+id/event_of_description_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="43dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:id="@+id/hashTagEditText"
        android:layout_below="@+id/hashtag_of_event_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_border_edittext"
        android:layout_alignRight="@+id/event_of_description_label"
        android:layout_alignEnd="@+id/event_of_description_label"
        android:textIsSelectable="false"
        android:textSize="24sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendees_max_label"
        android:id="@+id/attendees_max"
        android:layout_below="@+id/hashtag_of_event_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="43dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="15"
        android:id="@+id/attendees_maxEditText"
        android:layout_below="@+id/attendees_max"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_border_edittext"
        android:layout_alignRight="@+id/event_of_description_label"
        android:layout_alignEnd="@+id/event_of_description_label"
        android:textIsSelectable="false"
        android:textSize="24sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_whom_network"
        android:id="@+id/people_whom_attend"
        android:layout_below="@+id/attendees_max"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="43dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="15"
        android:id="@+id/people_whom_should_attend"
        android:layout_below="@+id/people_whom_attend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_border_edittext"
        android:layout_alignRight="@+id/event_of_description_label"
        android:layout_alignEnd="@+id/event_of_description_label"
        android:textIsSelectable="false"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publishButton"
        android:id="@+id/publishButton"
        android:textColor="@android:color/white"
        android:background="@drawable/roundshapebtn"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/people_whom_should_attend"
        android:layout_alignRight="@+id/attendees_max"
        android:layout_alignEnd="@+id/attendees_max" />

</RelativeLayout>
